--- a/index-vite.html
+++ b/index-vite.html
@@ -5,12 +5,10 @@
     <meta name="description" content="React Typescript Starter Template with Vite" />
     <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Mentor | Interactive card details form</title>
-
-    <!-- <link rel="stylesheet" href="./src/index.css"> -->
+    <title>Vite App</title>
   </head>
   <body>
-    <div id="root" class="app-wrapper"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
